--- a/options/options.html
+++ b/options/options.html
@@ -34,7 +34,7 @@
                         <input type="text" id="apikey" name="apikey" placeholder="APIKey" pattern="[A-Za-z0-9_~]{24}" required>
                     </div>
                     <div class='flex flex-cross-center flex-sb'>
-                        <button id="test">Test</button>
+                        <!-- <button id="test">Test</button> -->
                         <button type="submit" id="save" class='button-contrast'>Save</button>
                     </div>
                 </form>
